add skills and social buttons

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,3 +1,10 @@
+<div class="social-buttons">
+    <hr>
+    <img src="assets/icons/github.svg">
+    <img src="assets/icons/mail.svg">
+    <img src="assets/icons/linkedin.svg">
+</div>
+
 <div class="about-me-section">
     <div class="about-me-text">
         <h2>About me</h2>
@@ -5,18 +12,20 @@
             officia blanditiis laborum, unde delectus consequatur, fuga ab quisquam accusantium corporis recusandae.
             Vitae, ex error?</p>
         <div class="d-flex">
-            <img src="/assets/icons/bulb.svg">
+            <img src="assets/icons/bulb.svg">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem libero, repudiandae nostrum molestias vel
                 in cumque beatae fuga ab non, tempore perferendis quia facilis laborum hic iure reprehenderit
                 praesentium dolorum.</p>
         </div>
         <div class="d-flex">
-            <img src="/assets/icons/puzzle.svg">
+            <img src="assets/icons/puzzle.svg">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla beatae illo quidem sapiente consectetur
                 architecto adipisci placeat saepe. Sequi adipisci dicta repellat optio. Adipisci quia possimus
                 voluptates illum, accusantium animi?</p>
         </div>
     </div>
-    <img class="vector" src="/assets/shadows/vector.png">
-    <img class="shadow" src="/assets/shadows/shadow_9.png">
+    <!-- <img class="vector" src="/assets/shadows/vector.png"> -->
+    <div>
+        <img class="shadow" src="assets/shadows/shadow_9.png">
+    </div>
 </div>
