--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,9 @@
 <header>
-    <span>Philipp</span>
+    <img src="assets/phil_logo.png">
 
     <div>
         <a routerLink="/">About me</a>
         <a routerLink="/">Skills</a>
         <a href="#">Projects</a>
-        <a routerLink="/">Portfolio</a>
     </div>
 </header>
