--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-welcome-section></app-welcome-section>
 <app-about-me></app-about-me>
 <app-skills></app-skills>
+<app-portfolio></app-portfolio>
