start with portfolio component

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,10 @@
-<p>portfolio works!</p>
+<div class="portfolio-container">
+    <div class="portfolio-text-container">
+        <div class="portfolio-header">
+            <hr>
+            <h2>Portfolio</h2>
+        </div>
+        <p>This page is a sample of my work! Scroll down to view other<br>
+        projects i have developed.</p>
+    </div>
+</div>
