--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,6 @@
-<img class="vector" src="/assets/shadows/vector.png">
+<div>
+    <img class="vector" src="/assets/shadows/vector.png">
+</div>
 <div class="skill-container">
     <div class="icon-container">
         <div class="icon-row">
