continous with projects

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -7,4 +7,12 @@
         <p>This page is a sample of my work! Scroll down to view other<br>
         projects i have developed.</p>
     </div>
+    <div class="project-container">
+        <div class="filter-links">
+
+        </div>
+        <div class="projects">
+
+        </div>
+    </div>
 </div>
