start with portfolio and contacts

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,27 @@
-<p>contact works!</p>
+<div class="contact-container">
+    <div class="contact-header">
+        <h2>Contact</h2>
+        <hr>
+    </div>
+    <div class="contact-context">
+        <div class="problem-section">
+            <div class="problem-header">
+                <hr>
+                <h3>Got a problem to solve?</h3>
+            </div>
+            <p>Contact me through this form, i am interested in hearing <br>
+                you, knowing your ideas and contributing to your projects <br>
+                with my work.</p>
+            <p>Need a Frontend developer?<b>Contact me!</b></p>
+        </div>
+        <div class="form-section">
+            <form>
+                <input placeholder="Your name">
+                <input placeholder="Your email">
+                <textarea placeholder="Your message"></textarea>
+            </form>
+        </div>
+    </div>
+
+
+</div>
