--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
 <app-about-me></app-about-me>
 <app-skills></app-skills>
 <app-portfolio></app-portfolio>
+<app-contact></app-contact>
+<app-footer></app-footer>
