--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -9,10 +9,19 @@
     </div>
     <div class="project-container">
         <div class="filter-links">
-
+            <a href="">All</a>
+            <a href="">Angular</a>
+            <a href="">JavaScript</a>
         </div>
         <div class="projects">
-
+            <div class="line-1">
+                <img src="/assets/projects/Join_default.png">
+                <img src="/assets/projects/Pollo_loco_default.png">
+            </div>
+            <div class="line-2">
+                <img src="/assets/projects/Simple_CRM_default.png">
+                <img src="/assets/projects/Pokedex_default.png">
+            </div>
         </div>
     </div>
 </div>
