--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,10 +1,9 @@
+
 .skill-container {
     display: flex;
     justify-content: space-between;
     margin-top: -670px;
-    // background-image: url('../../assets/shadows/vector.png');
-    // background-repeat: no-repeat;
-    // background-size: 100%;
+    background-color: #141D2F;
 }
 
 .icon-container {
@@ -89,7 +88,16 @@
     }
 }
 
-
 .vector {
-    margin-top: -180px;
+    margin-top: -350px;
+    width: 100%;
+    
+
+    @media (max-width: 1400px) {
+        width: auto;
+    }
+}
+
+.test {
+    
 }
