start with responsive add ngFor for projects

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <div class="social-buttons">
     <hr>
-    <img src="assets/icons/github.svg">
+    <img (click)="openLink('https://github.com/Philzore')" src="assets/icons/github.svg">
     <img src="assets/icons/mail.svg">
     <img src="assets/icons/linkedin.svg">
 </div>
