--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,16 @@
-<p>footer works!</p>
+<hr>
+<div class="footer-container">
+    <div class="impress">
+        <img src="assets/phil_logo.png">
+        <a href="#">Impressum</a>
+    </div>
+    <div class="copyright">
+        <span>&copy;</span>
+        <span>Philipp Mössl 2023</span>
+    </div>
+    <div class="social-buttons">
+        <img (click)="openLink('https://github.com/Philzore')" src="assets/icons/github.svg">
+        <img src="assets/icons/mail.svg">
+        <img  src="assets/icons/linkedin.svg">
+    </div>
+</div>
