--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <app-welcome-section></app-welcome-section>
-<app-about-me></app-about-me>
-<app-skills></app-skills>
-<app-portfolio></app-portfolio>
+<app-about-me id="about-me"></app-about-me>
+<app-skills ></app-skills>
+<app-portfolio ></app-portfolio>
 <app-contact></app-contact>
 <app-footer></app-footer>
