--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,5 @@
-<div class="contact-container">
+<div class="contact-container" id="contact">
+    <img class="shadow" src="/assets/shadows/shadow_5.png">
     <div class="contact-header">
         <h2>Contact</h2>
         <hr>
@@ -14,11 +15,12 @@
                 with my work.</p>
             <p>Need a Frontend developer?<b>Contact me!</b></p>
         </div>
-        <div class="form-section">
-            <form>
+        <div >
+            <form class="form-section">
                 <input placeholder="Your name">
                 <input placeholder="Your email">
                 <textarea placeholder="Your message"></textarea>
+                <button class="btn-send" type="submit">Send message :)</button>
             </form>
         </div>
     </div>
