--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -13,6 +13,7 @@ header {
 
     img {
         height: 70px;
+        cursor: pointer;
     }
 
     a {
@@ -41,6 +42,7 @@ header {
             border-bottom: solid 3px;
             border-bottom: #4B47FF;
             transition: all 125ms ease-in-out;
+            cursor: pointer;
         }
     }
 }
