--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -4,6 +4,12 @@
     justify-content: space-between;
     margin-top: -670px;
     background-color: #141D2F;
+
+    @media(max-width: 1050px) {
+        justify-content: center;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
 }
 
 .icon-container {
@@ -12,10 +18,24 @@
     gap: 50px;
     margin-left: 50px;
 
+    @media(max-width: 1050px) {
+        margin-left: 0;
+    }
+
+    @media(max-width: 550px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     .icon-row {
         display: flex;
         flex-direction: column;
         gap: 30px;
+
+        @media(max-width: 550px) {
+            flex-direction: unset;
+        }
     }
 
     .single-icon {
@@ -37,6 +57,11 @@
                 40% {transform: translateY(-30px);}
                 60% {transform: translateY(-15px);}
             }
+
+            @media(max-width: 550px) {
+                height: 32px;;
+            }
+            
         }
     }
 }
@@ -45,6 +70,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @media(max-width: 1050px) {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
 
     .skill-header {
         display: flex;
@@ -56,6 +87,10 @@
             background-color: #1CE6B6;
             border: none;
             border-radius: 4px;
+        }
+
+        @media(max-width: 1050px) {
+            flex-direction: column;
         }
     }
 
@@ -85,6 +120,10 @@
             background-color: #4B47FF;
             scale: 1.1;
         }
+
+        @media(max-width: 1050px) {
+            margin-bottom: 50px;
+        }
     }
 }
 
@@ -96,8 +135,4 @@
     @media (max-width: 1400px) {
         width: auto;
     }
-}
-
-.test {
-    
 }
