--- a/src/app/welcome-section/welcome-section.component.scss
+++ b/src/app/welcome-section/welcome-section.component.scss
@@ -22,6 +22,8 @@
 .text-area {
     display: flex;
     align-items: center;
+    position: relative;
+    z-index: 1;
 
     span {
         color: white;
