--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -16,11 +16,14 @@
             <p>Need a Frontend developer?<b>Contact me!</b></p>
         </div>
         <div >
-            <form class="form-section">
-                <input placeholder="Your name">
-                <input placeholder="Your email">
-                <textarea placeholder="Your message"></textarea>
-                <button class="btn-send" type="submit">Send message :)</button>
+            <form (submit)="sendMail()" method="post" class="form-section" ngNativeValidate #myForm >
+                <input [class.success]="sentSuccess" required name="name" placeholder="Your name" #nameField>
+                <span *ngIf="nameError">Your name is required</span>
+                <input [class.success]="sentSuccess" type="email" required name="message" placeholder="Your email" #mailField>
+                <span *ngIf="">Your email is required</span>
+                <textarea [class.success]="sentSuccess" required placeholder="Your message" #messageField></textarea>
+                <span *ngIf="">Your message is empty</span>
+                <button class="btn-send" type="submit" #sendButton>Send message :)</button>
             </form>
         </div>
     </div>
