--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -83,7 +83,7 @@
             border-radius: 10px;
             border: solid 1px;
             border-color: #4B47FF;
-            background-color: #141D2F;
+            background-color: #141D2F !important;
             min-width: 600px;
             font-size: 16px;
             font-family: "Poppins", sans-serif;
@@ -117,5 +117,20 @@
                 scale: 1.1;
             }
         }
+    }
+
+    .success {
+        border-color: #70E61C !important;
+        background-image: url('../../assets/icons/form_ok.png');
+        background-repeat: no-repeat;
+        background-position: right;
+
+        textarea {
+            background-position: top;
+        }
+    }
+
+    .ng-invalid:not(form) {
+        border-color: red !important;
     }
 }
