--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,6 +11,6 @@
     <div class="social-buttons">
         <img (click)="openLink('https://github.com/Philzore')" src="assets/icons/github.svg">
         <img src="assets/icons/mail.svg">
-        <img  src="assets/icons/linkedin.svg">
+        <img (click)="openLink('https://www.linkedin.com/in/philipp-m%C3%B6ssl-2b6567291/')" src="assets/icons/linkedin.svg">
     </div>
 </div>
