add profile imgand cont with responsive

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -25,7 +25,8 @@
         </div>
     </div>
     <!-- <img class="vector" src="/assets/shadows/vector.png"> -->
-    <div>
+    <div class="profile-img">
         <img class="shadow" src="assets/shadows/shadow_9.png">
+        <img class="profile" src="assets/profile/profile_2.png">
     </div>
 </div>
