--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -15,14 +15,23 @@
                 with my work.</p>
             <p>Need a Frontend developer?<b>Contact me!</b></p>
         </div>
-        <div >
-            <form (submit)="sendMail()" method="post" class="form-section" ngNativeValidate #myForm >
+        <div>
+            <form (submit)="sendMail()" method="post" class="form-section" ngNativeValidate #myForm>
                 <input [class.success]="sentSuccess" required name="name" placeholder="Your name" #nameField>
                 <span *ngIf="nameError">Your name is required</span>
-                <input [class.success]="sentSuccess" type="email" required name="message" placeholder="Your email" #mailField>
+                <input [class.success]="sentSuccess" type="email" required name="message" placeholder="Your email"
+                    #mailField>
                 <span *ngIf="">Your email is required</span>
                 <textarea [class.success]="sentSuccess" required placeholder="Your message" #messageField></textarea>
                 <span *ngIf="">Your message is empty</span>
+                <div class="check-privacy">
+                    <input class="checkbox" required type="checkbox">
+                    <div >
+                        <span>I´ve read the</span>
+                        <span class="purple"> privacy policy </span>
+                        <span>and agree to the processing of my data as outlined.</span>
+                    </div>
+                </div>
                 <button class="btn-send" type="submit" #sendButton>Send message :)</button>
             </form>
         </div>
