--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
 
     .portfolio-header {
         display: flex;
