--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="test">
+<div class="vector-bg">
     <img class="vector" src="/assets/shadows/vector.png">
 </div>
 <div class="skill-container" id="skills">
