--- a/src/app/welcome-section/welcome-section.component.scss
+++ b/src/app/welcome-section/welcome-section.component.scss
@@ -42,6 +42,16 @@
         margin-top: 0;
         margin-bottom: 0;
     }
+
+    @media (max-width:1050px) {
+        h1 {
+            font-size: 46px;
+        }
+
+        h2 {
+            font-size: 32px;
+        }
+    }
 }
 
 .i-am {
