--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -26,7 +26,7 @@
                 <span *ngIf="">Your message is empty</span>
                 <div class="check-privacy">
                     <input class="checkbox" required type="checkbox">
-                    <div >
+                    <div class="privacy-text">
                         <span>I´ve read the</span>
                         <span class="purple"> privacy policy </span>
                         <span>and agree to the processing of my data as outlined.</span>
