--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -37,6 +37,12 @@
     display: flex;
     justify-content: space-between;
 
+    @media (max-width:800px) {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
     .problem-section {
         display: flex;
         flex-direction: column;
@@ -47,6 +53,10 @@
             display: flex;
             align-items: center;
             gap: 10px;
+
+            @media (max-width:800px) {
+                flex-direction: column-reverse;
+            }
 
             h3 {
                 font-size: 32px;
@@ -65,6 +75,10 @@
 
         p {
             margin-left: 60px;
+
+            @media (max-width:800px) {
+                margin-left: 0;
+            }
         }
     }
 
@@ -74,6 +88,10 @@
         align-items: center;
         gap: 35px;
         margin-right: 50px;
+
+        @media (max-width:800px) {
+            margin-right: 0;
+        }
 
 
         input,
@@ -92,6 +110,10 @@
                 border-color: #1CE6B6;
                 cursor: pointer;
             }
+
+            @media (max-width:1180px) {
+                min-width: 300px;
+            }
         }
 
         textarea {
@@ -106,11 +128,13 @@
 
         .checkbox {
             accent-color: #00BEE8;
-            width: 24px ;
+            width: 24px;
             min-width: 0 !important;
 
-            &::before{
-                background-color: #141D2F;
+
+            &::before {
+                // background-color: #141D2F;
+                color: transparent;
             }
         }
 
@@ -125,6 +149,12 @@
             align-items: center;
         }
 
+        .privacy-text {
+            @media (max-width:1180px) {
+                max-width: 300px;
+            }
+        }
+
         .btn-send {
             padding: 15px 30px;
             background-color: #00BEE8;
@@ -136,6 +166,7 @@
             transition: all 125ms ease-in-out;
             width: 250px;
             margin-bottom: 50px;
+            position: relative;
 
             &:hover {
                 background-color: #4B47FF;
