--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -25,6 +25,11 @@ hr {
     z-index: 1;
     position: relative;
 
+    @media (max-width:700px) {
+        flex-direction: column;
+        gap: 30px;
+    }
+
     .impress {
         display: flex;
         flex-direction: column;
