--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -64,6 +64,9 @@
                 @media (max-width: 1340px) {
                     height: 400px;
                 }
+                @media (max-width: 500px) {
+                    height: 300px;
+                }
             }
 
             &:hover {
@@ -93,6 +96,10 @@
                 display: flex;
                 margin-bottom: 100px;
                 gap: 50px;
+
+                @media (max-width:1340px) {
+                    margin-bottom: 10px;
+                }
 
                 button {
                     padding: 15px 30px;
@@ -143,6 +150,10 @@
                 h4 {
                     color: #4B47FF;
                     font-size: 32px;
+
+                    @media (max-width:1340px) {
+                        margin: 0;
+                    }
                 }
 
                 p {
@@ -152,6 +163,10 @@
                 span {
                     color: #00BEE8;
                     font-size: 24px;
+                }
+
+                @media (max-width:1340px) {
+                    height: 300px;
                 }
             }
         }
