--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,6 +1,7 @@
 .vector-bg {
+    background-color: #141D2F;
     @media(max-width: 1050px) {
-        background-color: #141D2F;
+        
     }
 }
 
@@ -140,5 +141,9 @@
 
     @media (max-width: 1400px) {
         width: auto;
+    }
+
+    @media (max-width:1340px) {
+        margin-top: -180px;
     }
 }
