--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -15,6 +15,8 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    position: relative;
+    z-index: 1;
 
     h2 {
         margin: 0;
@@ -29,6 +31,15 @@
         border: none;
         border-radius: 4px;
         margin: 0;
+    }
+
+    @media (max-width:850px) {
+        flex-direction: column;
+        margin-bottom: 20px;
+
+        hr {
+            width: 100%;
+        }
     }
 }
 
@@ -47,7 +58,8 @@
         display: flex;
         flex-direction: column;
         color: white;
-
+        position: relative;
+        z-index: 1;
 
         .problem-header {
             display: flex;
