--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,12 +4,11 @@ header {
     right: 0;
     top: 0;
     height: 80px;
-    z-index: 1;
+    z-index: 2;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 120px;
-    padding-right: 120px;
+    background-color: #141D2F;
 
     img {
         height: 70px;
@@ -45,4 +44,72 @@ header {
             cursor: pointer;
         }
     }
+
+    .desktop-nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .mobile-nav  {
+        display: none;
+    }
+
+    .mobile-links {
+        display: none;
+    }
+
+    @media(max-width: 860px) {
+        
+    }
+
+    @media(max-width: 660px) {
+        position: fixed;
+        background-color: #141D2F;
+        z-index: 5;
+        height: auto;
+        padding: 10px 10px;
+
+        .header-nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+        }
+
+        .desktop-nav {
+            display: none;
+        }
+
+        .mobile-links {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            width: 100%;
+            margin-top: 20px;
+
+            a {
+                margin-left: 0;
+            }
+        }
+
+        .mobile-nav {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            justify-content: space-between;
+            width: 100%;
+            padding-left: 20px;
+            padding-right: 20px;
+            flex-direction: column;
+
+            .burger-menu {
+                height: 48px;
+            }
+        }
+    }
 }
+
+
+
