--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,8 +1,7 @@
 .vector-bg {
     background-color: #141D2F;
-    @media(max-width: 1050px) {
-        
-    }
+
+    @media(max-width: 1050px) {}
 }
 
 
@@ -55,20 +54,34 @@
         img {
             height: 64px;
 
-            &:hover{
+            &:hover {
                 animation: bounce 1s ease infinite;
             }
 
             @keyframes bounce {
-                0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-                40% {transform: translateY(-30px);}
-                60% {transform: translateY(-15px);}
+
+                0%,
+                20%,
+                50%,
+                80%,
+                100% {
+                    transform: translateY(0);
+                }
+
+                40% {
+                    transform: translateY(-30px);
+                }
+
+                60% {
+                    transform: translateY(-15px);
+                }
             }
 
             @media(max-width: 550px) {
-                height: 32px;;
+                height: 32px;
+                ;
             }
-            
+
         }
     }
 }
@@ -99,6 +112,12 @@
         @media(max-width: 1050px) {
             flex-direction: column;
         }
+
+        @media (max-width:850px) {
+            hr {
+                width: 100vw;
+            }
+        }
     }
 
     h2 {
@@ -122,7 +141,9 @@
         border-radius: 10px;
         font-size: 24px;
         transition: all 125ms ease-in-out;
-    
+        position: relative;
+        z-index: 1;
+
         &:hover {
             background-color: #4B47FF;
             scale: 1.1;
