--- a/src/app/welcome-section/welcome-section.component.scss
+++ b/src/app/welcome-section/welcome-section.component.scss
@@ -44,12 +44,22 @@
     }
 
     @media (max-width:1050px) {
-        h1 {
-            font-size: 46px;
+        h1, span {
+            font-size: 64px;
         }
 
         h2 {
+            font-size: 48px;
+        }
+    }
+
+    @media (max-width:640px) {
+        h1, span {
             font-size: 32px;
+        }
+
+        h2 {
+            font-size: 24px;
         }
     }
 }
