--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
 <div class="footer-container">
     <div class="impress">
         <img src="assets/phil_logo.png">
-        <a href="#">Impressum</a>
+        <a routerLink="/imprint">Impressum</a>
     </div>
     <div class="copyright">
         <span>&copy;</span>
