--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="desktop-nav">
-        <img (click)="goDown('header')" src="assets/phil_logo.png">
-        <div>
+        <a routerLink="/"><img (click)="goDown('header')" src="assets/phil_logo.png"></a>
+        <div *ngIf="router.url == '/'">
             <a (click)="goDown('about-me')">About me</a>
             <a (click)="goDown('skills')">Skills</a>
             <a (click)="goDown('projects')">Projects</a>
@@ -11,11 +11,11 @@
 
     <div class="mobile-nav">
         <div class="header-nav">
-            <img (click)="goDown('header')" src="assets/phil_logo.png">
-            <img class="burger-menu" src="assets/icons/menu.ico" (click)="openMenu()">
+            <a routerLink="/"><img (click)="goDown('header')" src="assets/phil_logo.png"></a>
+            <img *ngIf="router.url == '/'" class="burger-menu" src="assets/icons/menu.ico" (click)="openMenu()">
         </div>
 
-        <div class="mobile-links" #myLinks>
+        <div *ngIf="router.url == '/'" class="mobile-links" #myLinks>
             <a (click)="goDown('about-me')">About me</a>
             <a (click)="goDown('skills')">Skills</a>
             <a (click)="goDown('projects')">Projects</a>
