--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
 <app-header id="header"></app-header>
-<app-welcome-section></app-welcome-section>
-<app-about-me id="about-me"></app-about-me>
-<app-skills id="skills"></app-skills>
-<app-portfolio ></app-portfolio>
-<app-contact></app-contact>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
+
