--- a/src/app/welcome-section/welcome-section.component.scss
+++ b/src/app/welcome-section/welcome-section.component.scss
@@ -1,6 +1,6 @@
 .welcome-container {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
     background-color: #141D2F;
     position: relative;
@@ -54,6 +54,16 @@
     }
 
     @media (max-width:640px) {
+        h1, span {
+            font-size: 48px;
+        }
+
+        h2 {
+            font-size: 32px;
+        }
+    }
+
+    @media (max-width:400px) {
         h1, span {
             font-size: 32px;
         }
