--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ html {
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    width: 100vw;
+    width: 100%;
     overflow-x: hidden;
 }
 
