fix form bugs , start with filter projects

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -8,20 +8,21 @@
 <div class="about-me-section">
     <div class="about-me-text">
         <h2>About me</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus quis mollitia facere non ea veniam
-            officia blanditiis laborum, unde delectus consequatur, fuga ab quisquam accusantium corporis recusandae.
-            Vitae, ex error?</p>
+        <p>Hi, I am a junior Front-End developer based in Neugersdorf, Germany. I have gained experience in developing Web
+            and Mobile applications with Angular and Javascript. Since i´am a Robot programer i have always
+            been fascinated in IT and especially programming. So I used the chance in Developer Akademie to dive into new
+            projects and challanges. Now my enthusiasm turned into a passion. </p>
         <div class="d-flex">
             <img src="assets/icons/bulb.svg">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem libero, repudiandae nostrum molestias vel
-                in cumque beatae fuga ab non, tempore perferendis quia facilis laborum hic iure reprehenderit
-                praesentium dolorum.</p>
+            <p>I am ready to take the next step in my career and find a position as a Junior Web Developer which allows
+                me to collaborate with team and improve my programming skills. I look forward the opportunity of
+                contributing my technical knowledge to solve problems and help people and businesses with user-friendly
+                and visually pleasing products. </p>
         </div>
         <div class="d-flex">
             <img src="assets/icons/puzzle.svg">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla beatae illo quidem sapiente consectetur
-                architecto adipisci placeat saepe. Sequi adipisci dicta repellat optio. Adipisci quia possimus
-                voluptates illum, accusantium animi?</p>
+            <p>If you think I could be a good addition to your projects and team, I would be very glad to talk. Let's
+                discuss how we can work together effectively for your web solution. Don't hesitate to get in touch!</p>
         </div>
     </div>
     <div class="profile-img">
