--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -16,21 +16,33 @@
             <p>Need a Frontend developer?<b>Contact me!</b></p>
         </div>
         <div>
-            <form (submit)="sendMail()" method="post" class="form-section" ngNativeValidate #myForm>
-                <input [class.success]="sentSuccess" required name="name" placeholder="Your name" #nameField>
-                <span *ngIf="nameError">Your name is required</span>
-                <input [class.success]="sentSuccess" type="email" required name="message" placeholder="Your email"
-                    #mailField>
-                <span *ngIf="">Your email is required</span>
-                <textarea [class.success]="sentSuccess" required placeholder="Your message" #messageField></textarea>
-                <span *ngIf="">Your message is empty</span>
-                <div class="check-privacy">
-                    <input class="checkbox" required type="checkbox">
-                    <div class="privacy-text">
-                        <span>I´ve read the</span>
-                        <span class="purple"> privacy policy </span>
-                        <span>and agree to the processing of my data as outlined.</span>
+            <form (ngSubmit)="sendMail()" method="post" class="form-section" autocomplete="off" ngNativeValidate #myForm>
+                <!-- Name Input -->
+                <div class="input-section">
+                    <input id="name" [class.success]="sentSuccess" [class.sent-error]="nameError" name="name" placeholder="Your name" #nameField>
+                    <div class="form-error">{{nameErrorMsg}}</div>
+                </div>
+                <!-- Mail Input -->
+                <div class="input-section">
+                    <input [class.success]="sentSuccess" [class.sent-error]="mailError" type="text" name="message" placeholder="Your email" #mailField>
+                    <div class="form-error">{{mailErrorMsg}}</div>
+                </div>
+                <!-- Message Input -->
+                <div class="input-section">
+                    <textarea [class.success]="sentSuccess" [class.sent-error]="messageError" placeholder="Your message" #messageField></textarea>
+                    <div class="form-error">{{messageErrorMsg}}</div>
+                </div>
+                <!-- Policy Checkbox -->
+                <div class="policy-content">
+                    <div class="check-privacy">
+                        <input class="checkbox" type="checkbox" #policyCheckbox>
+                        <div class="privacy-text">
+                            <span>I´ve read the</span>
+                            <span class="purple"> privacy policy </span>
+                            <span>and agree to the processing of my data as outlined.</span>
+                        </div>
                     </div>
+                    <div class="form-error">{{privacyErrorMsg}}</div>
                 </div>
                 <button class="btn-send" type="submit" #sendButton>Send message :)</button>
             </form>
