--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -4,8 +4,20 @@
     padding-left: 25px;
     padding-right: 25px;
     padding-bottom: 10px;
+    margin-top: 70px;
+    padding-top: 30px;
+
+    hr {
+        width: 100%;
+        height: 4px;
+        background-color: #00BEE8;
+        border: none;
+        border-radius: 4px;
+        margin: 0;
+    }
 
     a {
         color: white;
     }
 }
+
